--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -9,18 +9,9 @@
     <ui:define name="content">
 
         <form name="loginForm" method="POST" action="j_security_check">
-            <p>
-                <strong>Enter your user name:</strong>
-                <label><input name="j_username" size="15" /></label>
-            </p>
-            <p>
-                <strong>Enter your password: </strong>
-                <label><input type="password" size="15" name="j_password" /></label>
-            </p>
-            <p>
-                <input type="submit" value="Submit" />
-                <input type="reset" value="Reset" />
-            </p>
+            <p><strong>Enter your user name: </strong><label><input name="j_username" size="15" /></label></p>
+            <p><strong>Enter your password: </strong><label><input type="password" size="15" name="j_password" /></label></p>
+            <p><input type="submit" value="Submit" /><input type="reset" value="Reset" /></p>
         </form>
 
     </ui:define>
