dashboard2 mit PrimeFaces

--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -8,9 +8,8 @@
     <ui:define name="header">#{msgs['index.header']}</ui:define>
     <ui:define name="content">
 
-        <p>Flow Test: #{facesContext.application.flowHandler.currentFlow != null}</p>
-        <p>Flow ID: #{facesContext.application.flowHandler.currentFlow.id}</p>
-        <p>User: #{securityBean.loginName}</p>
+        <p>Hier werden verschiedene UIs für die Tickets getestet</p>
+
 
     </ui:define>
 </ui:composition>
