--- a/src/main/webapp/pages/tickets.xhtml
+++ b/src/main/webapp/pages/tickets.xhtml
@@ -17,18 +17,18 @@
         <h:form id="mainForm">
 
 
-            <h:dataTable value="#{ticketBean.allArticles}" var="article" styleClass="borderedTable" id="articleTable" binding="#{artTabBinding}">
+            <h:dataTable value="#{ticketBean.allArticles}" var="ticket" styleClass="borderedTable" id="articleTable" binding="#{artTabBinding}">
                 <h:column>
                     <f:facet name="header">Status</f:facet>
-                    #{article.status}
+                    #{ticket.status}
                 </h:column>
                 <h:column>
                     <f:facet name="header">Editor</f:facet>
-                    #{article.editorId}
+                    #{ticket.editorId}
                 </h:column>
                 <h:column>
                     <f:facet name="header">Subject</f:facet>
-                    #{article.subject}
+                    #{ticket.subject}
                 </h:column>
                 <h:column>
                     <h:commandButton action="#{personBean.test()}" value="Anzeigen"/>
