--- a/src/main/webapp/pages/dashboardAjax.xhtml
+++ b/src/main/webapp/pages/dashboardAjax.xhtml
@@ -8,11 +8,12 @@
       xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/basic.xhtml">
-    <ui:define name="title">#{msgs['dashboard2.title']}</ui:define>
-    <ui:define name="header">#{msgs['dashboard2.header']}</ui:define>
+<ui:define name="title">#{msgs['dashboard2.title']}</ui:define>
+<ui:define name="header">#{msgs['dashboard2.header']}</ui:define>
 <ui:define name="content">
 
 <h:form id="form">
+
 
     <style type="text/css">
         .logo {
@@ -34,14 +35,20 @@
         }
     </style>
 
-    <p:dataScroller value="#{ticketBean.allArticles}" var="ticket" chunkSize="10">
+    <p:inputText value="#{ticketBean.ticketSearchString}">
+        <p:ajax event="keyup" delay="100" update="searchResult"
+                listener="#{ticketBean.doSearch}" />
+    </p:inputText>
+
+    <p:dataScroller id="searchResult" value="#{ticketBean.ticketSearchResult}" var="ticket" chunkSize="10">
         <f:facet name="header">
             Scroll Down to Load More Tickets
         </f:facet>
 
-        <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
+        <h:panelGrid columns="3" style="width:100%" columnClasses="logo,detail">
+            <h:commandButton action="#{ticketBean.ticketClick}" value="Details" id="detailsButton"/>
 
-            <p:graphicImage library="images" name="#{ticket.status}.png" alt="#{ticket.status}" />
+            <p:graphicImage library="images" name="#{ticket.status}.png" alt="#{ticket.status}"/>
 
             <p:outputPanel>
                 <h:panelGrid columns="2" cellpadding="5">
@@ -54,7 +61,6 @@
             </p:outputPanel>
         </h:panelGrid>
     </p:dataScroller>
-
 </h:form>
 </ui:define>
 </ui:composition>
