--- a/src/main/webapp/pages/dashboard2.xhtml
+++ b/src/main/webapp/pages/dashboard2.xhtml
@@ -34,7 +34,7 @@
         }
     </style>
 
-    <p:dataScroller value="#{ticketBean.allArticles}" var="ticket" chunkSize="10">
+    <p:dataScroller value="#{ticketBean.tickets}" var="ticket" chunkSize="10">
         <f:facet name="header">
             Scroll Down to Load More Tickets
         </f:facet>
