--- a/src/main/webapp/pages/detail.xhtml
+++ b/src/main/webapp/pages/detail.xhtml
@@ -21,7 +21,7 @@
 
         <p:growl id="msgs" showDetail="true" />
 
-        <p:fieldset legend="Entri Date oder so" toggleable="true" toggleSpeed="500">
+        <p:fieldset legend="Entry Date oder so" toggleable="true" toggleSpeed="500">
             <p:ajax event="toggle" />
             <h:panelGrid columns="2" cellpadding="5">
                 <p:graphicImage library="images" name="#{ticketBean.currentTicket.status}.png" alt="#{ticketBean.currentTicket.status}" />
