Customer User Views 5 rendered und Ajax preload keine anzeige bei editor Tickets

--- a/src/main/webapp/pages/customer/home.xhtml
+++ b/src/main/webapp/pages/customer/home.xhtml
@@ -35,7 +35,7 @@
         }
     </style>
 
-    #{ticketBean.doCustomerSearchHome}
+    #{ticketBean.doCustomerSearchHome()}
 
     <h:outputText rendered="#{!ticketBean.rendered}" value="Keine Tickets gefunden" />
 
