--- a/src/main/webapp/pages/admin/detail.xhtml
+++ b/src/main/webapp/pages/admin/detail.xhtml
@@ -8,8 +8,8 @@
       xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/basic.xhtml">
-<ui:define name="title">#{msgs['editor.details.title']}</ui:define>
-<ui:define name="header">#{msgs['editor.details.header']}</ui:define>
+<ui:define name="title">#{msgs['admin.details.title']}</ui:define>
+<ui:define name="header">#{msgs['admin.details.header']}</ui:define>
 <ui:define name="content">
     <h:form id="form">
 
