--- a/src/main/webapp/pages/editor/detail.xhtml
+++ b/src/main/webapp/pages/editor/detail.xhtml
@@ -13,21 +13,65 @@
 <ui:define name="content">
     <h:form id="form">
 
-        <p:graphicImage library="images" name="#{ticketBean.currentTicket.status}.png" alt="#{ticketBean.currentTicket.status}" />
-        <h2 style="margin-top:0">Subject: #{ticketBean.currentTicket.subject}</h2>
-        <h3 style="margin-top:0">Status: #{ticketBean.currentTicket.status}</h3>
-        <h3 style="margin-top:0">Ticet ID: #{ticketBean.currentTicket.id}</h3>
-        <h3 style="margin-top:0">Editor ID: #{ticketBean.currentTicket.editorId}</h3>
+        <style type="text/css">
+            .logo {
+                width: 5%
+            }
 
-        <p:growl id="msgs" showDetail="true" />
+            .detail {
+                width: 95%;
+                padding-left: 25px;
+            }
 
-        <p:fieldset legend="Entry Date oder so" toggleable="true" toggleSpeed="500">
-            <p:ajax event="toggle" />
-            <h:panelGrid columns="2" cellpadding="5">
-                <p:graphicImage library="images" name="#{ticketBean.currentTicket.status}.png" alt="#{ticketBean.currentTicket.status}" />
-                <h:outputText value="ENTRIES" />
+            .detail td {
+                font-size: 24px;
+            }
+
+            .ui-datascroller .ui-datascroller-item {
+                border-bottom: 1px solid #A8A8A8;
+                padding: 25px 10px;
+            }
+        </style>
+
+        <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
+            <h:outputText />
+            <h:panelGrid columns="3" class="buttons">
+                <p:commandButton value="#{msgs['button.add.entry']}" />
+                <p:commandButton value="#{msgs['button.delegate']}" />
+                <p:commandButton value="#{msgs['button.release']}" />
             </h:panelGrid>
-        </p:fieldset>
+
+            <p:graphicImage library="images" name="#{ticketBean.currentTicket.status}.png" alt="#{ticketBean.currentTicket.status}" />
+            <h:outputText value="#{ticketBean.currentTicket.status}" />
+
+            <h2 style="margin-top:0">Subject: </h2>
+            <h:outputText value="#{ticketBean.currentTicket.subject}" />
+
+            <h3 style="margin-top:0">Ticket ID: </h3>
+            <h:outputText value="#{ticketBean.currentTicket.id}" />
+
+            <h3 style="margin-top:0">Editor ID: </h3>
+            <h:outputText value="#{ticketBean.currentTicket.editorId}" />
+        </h:panelGrid>
+
+        <p:dataScroller id="searchResult" value="#{ticketBean.ticketSearchResult}" var="ticket" chunkSize="10" rendered="#{ticketBean.rendered}">
+            <f:facet name="header">
+                Scroll Down to Load More Entries
+            </f:facet>
+
+            <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
+                <h:outputText value="#{msgs['date']}" />
+                <h:outputText value="4.20.0420" />
+
+                <h:outputText value="#{msgs['editor']}" />
+                <h:outputText value="#{ticket.editorId}" />
+
+                <h:outputText value="#{msgs['entry']}" />
+                <h:outputText value="#{ticket.subject}" style="font-weight: bold"/>
+
+                <h:outputText value="#{msgs['entries']}" />
+            </h:panelGrid>
+        </p:dataScroller>
 
     </h:form>
 </ui:define>
