--- a/src/main/webapp/pages/editor/detail.xhtml
+++ b/src/main/webapp/pages/editor/detail.xhtml
@@ -31,17 +31,32 @@
                 border-bottom: 1px solid #A8A8A8;
                 padding: 25px 10px;
             }
+
         </style>
 
-        <p:dialog header="Modal Dialog" widgetVar="dlgEntry" modal="true" height="100">
-            <h:outputText value="This is a Dialog." />
+        <p:dialog header="#{msgs['entry.edit']}" widgetVar="dlgEntry" modal="true" height="200" width="500">
+            <p:inputTextarea style="margin: 0 auto" rows="8" cols="70" id="entryText"/>
+            <p:commandButton value="Eintrag Hinzufühen" action="#{ticketBean.addEntry()}"/>
+        </p:dialog>
+
+        <p:dialog header="#{msgs['entry.delegate']}" widgetVar="dlgDelegate" modal="true" height="200" width="500">
+            <p:dataScroller id="editors" value="#{return}" var="user" chunkSize="10">
+                <f:facet name="header">
+                    Scroll Down to Load More Uers
+                </f:facet>
+
+                <h:panelGrid columns="2" style="width:100%">
+                    <h:outputText value="#{return}" />
+                    <p:commandButton value="Delegieren" action="#{ticketBean.delegate(user.id)}"/>
+                </h:panelGrid>
+            </p:dataScroller>
         </p:dialog>
 
         <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
             <h:outputText />
             <h:panelGrid columns="3" class="buttons">
                 <p:commandButton value="#{msgs['button.add.entry']}" type="button" onclick="PF('dlgEntry').show();" />
-                <p:commandButton value="#{msgs['button.delegate']}" />
+                <p:commandButton value="#{msgs['button.delegate']}" type="button" onclick="PF('dlgDelegate').show();" />
                 <p:commandButton value="#{msgs['button.release']}" />
             </h:panelGrid>
 
