--- a/src/main/webapp/pages/editor/detail.xhtml
+++ b/src/main/webapp/pages/editor/detail.xhtml
@@ -50,7 +50,7 @@
         </p:dialog>
 
         <p:dialog header="#{msgs['ticket.delegate']}" widgetVar="dlgDelegate" modal="true" height="600" width="500" resizable="false">
-            <p:dataScroller id="editors" value="#{userBean.users}" var="user" chunkSize="10">
+            <p:dataScroller id="editors" value="#{userBean.getEditors()}" var="user" chunkSize="10">
                 <f:facet name="header">
                     Scroll Down to Load More Uers
                 </f:facet>
