--- a/src/main/webapp/pages/editor/detail.xhtml
+++ b/src/main/webapp/pages/editor/detail.xhtml
@@ -95,7 +95,7 @@
                 <h:outputText value="#{entry.createDate}" />
 
                 <h:outputText value="#{msgs['editor']}: " />
-                <h:outputText value="#{entry.creatorID}" />
+                <h:outputText value="#{userBean.getUserName(entry.creatorID)}" />
 
                 <h:outputText value="#{msgs['entry']}: " />
                 <h:outputText value="#{entry.content}" />
