--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="header">#{msgs['index.header']}</ui:define>
     <ui:define name="content">
 
-        <p>Hier werden verschiedene UIs für die Tickets getestet</p>
+        <p>Ticket Master</p>
 
 
     </ui:define>
