anpassen detail ansicht und suche nach Customer tickets fix

--- a/src/main/webapp/pages/editor/detail.xhtml
+++ b/src/main/webapp/pages/editor/detail.xhtml
@@ -82,6 +82,12 @@
             <h3 style="margin-top:0">Editor ID: </h3>
             <h:outputText value="#{ticketBean.currentTicket.editorId}" />
 
+            <h3 style="margin-top:0">Customer: </h3>
+            <h:outputText value="#{userBean.getUserName(ticketBean.currentTicket.customerId)}" />
+
+            <h3 style="margin-top:0">Customer Company: </h3>
+            <h:outputText value="#{userBean.getUserCompany(ticketBean.currentTicket.customerId)}" />
+
             <h3>#{msgs['entries']}: </h3>
         </h:panelGrid>
 
