anpassung nav bar

--- a/src/main/webapp/pages/customer/detail.xhtml
+++ b/src/main/webapp/pages/customer/detail.xhtml
@@ -58,7 +58,7 @@
             <h3 style="margin-top:0">Customer: </h3>
             <h:outputText value="#{userBean.getUserName(ticketBean.currentTicket.customerId)}" />
 
-            <h3 style="margin-top:0">Customer Company: </h3>
+            <h3 style="margin-top:0">Company: </h3>
             <h:outputText value="#{userBean.getUserCompany(ticketBean.currentTicket.customerId)}" />
 
             <h3>#{msgs['entries']}: </h3>
