Fix navbar for detail view: user and editor-tickets; Optimize design and navigation flow

--- a/src/main/webapp/pages/admin/users.xhtml
+++ b/src/main/webapp/pages/admin/users.xhtml
@@ -52,7 +52,7 @@
                 </f:facet>
 
                 <h:panelGrid columns="2" style="width:100%" columnClasses="button,detail">
-                        <p:commandButton value="Details" action="#{userBean.userDetail(user.id)}"/>
+                        <h:commandButton value="Details" action="#{userBean.userDetail(user.id)}"/>
 
                         <p:outputPanel>
                                 <h:panelGrid style="width:100%" columns="6" cellpadding="5" columnClasses="infos, userID, infos, userName, infos">
