--- a/src/main/webapp/pages/editor/tickets.xhtml
+++ b/src/main/webapp/pages/editor/tickets.xhtml
@@ -50,7 +50,7 @@
         </f:facet>
 
         <h:panelGrid columns="3" style="width:100%" columnClasses="logo,logo,detail">
-            <p:commandButton action="#{ticketBean.detail(ticket.id)}" value="Details" />
+            <h:commandButton action="#{ticketBean.detail(ticket.id)}" value="Details" />
 
             <p:graphicImage library="images" name="#{ticket.status}.png" alt="#{ticket.status}"/>
 
