--- a/src/main/webapp/pages/editor/ticket-details.xhtml
+++ b/src/main/webapp/pages/editor/ticket-details.xhtml
@@ -45,8 +45,8 @@
         </style>
 
         <p:dialog header="#{msgs['entry.edit']}" widgetVar="dlgEntry" modal="true" height="200" width="500">
-            <p:inputTextarea style="margin: 0 auto" rows="8" cols="70" id="entryText" value="#{ticketBean.entryContent}" />
-            <p:commandButton value="Eintrag Hinzufühen" action="#{ticketBean.addEntryToTicket(0, ticketBean.entryContent)}" onclick="location.reload();"/>
+            <p:inputTextarea style="margin: 0 auto" rows="8" cols="70" id="entryText" value="#{ticketEditorBean.entryContent}" />
+            <p:commandButton value="Eintrag Hinzufügen" action="#{ticketEditorBean.addEntryToTicket(ticketEditorBean.entryContent)}" />
         </p:dialog>
 
         <p:dialog header="#{msgs['ticket.delegate']}" widgetVar="dlgDelegate" modal="true" height="600" width="500" resizable="false">
@@ -57,7 +57,7 @@
 
                 <h:panelGrid columns="2" style="width:100%" columnClasses="delegate,delegateButtons">
                     <h:outputText value="#{user.name}" />
-                    <h:commandButton value="Delegieren" action="#{ticketBean.delegateTicket(user.id)}" id="delegateTicket" onclick="location.reload();"/>
+                    <p:commandButton value="Delegieren" action="#{ticketEditorBean.delegateTicket(user.id)}" id="delegateTicket" />
                 </h:panelGrid>
             </p:dataScroller>
         </p:dialog>
@@ -65,33 +65,33 @@
         <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
             <h:outputText />
             <h:panelGrid columns="3" class="buttons">
-                <h:commandButton value="#{msgs['button.add.entry']}" type="button" onclick="PF('dlgEntry').show();" />
-                <h:commandButton value="#{msgs['button.delegate']}" type="button" onclick="PF('dlgDelegate').show();" />
-                <h:commandButton action="#{ticketBean.releaseTicket()}" value="#{msgs['button.release']}"  onclick="location.reload();"/>
+                <p:commandButton value="#{msgs['button.add.entry']}" type="button" onclick="PF('dlgEntry').show();" />
+                <p:commandButton value="#{msgs['button.delegate']}" type="button" onclick="PF('dlgDelegate').show();" />
+                <p:commandButton value="#{msgs['button.release']}" action="#{ticketEditorBean.releaseTicket()}" />
             </h:panelGrid>
 
-            <p:graphicImage library="images" name="#{ticketBean.currentTicket.status}.png" alt="#{ticketBean.currentTicket.status}" />
-            <h:outputText value="#{ticketBean.currentTicket.status}" />
+            <p:graphicImage library="images" name="#{ticketEditorBean.currentTicket.status}.png" alt="#{ticketEditorBean.currentTicket.status}" />
+            <h:outputText value="#{ticketEditorBean.currentTicket.status}" />
 
             <h2 style="margin-top:0">Subject: </h2>
-            <h:outputText value="#{ticketBean.currentTicket.subject}" />
+            <h:outputText value="#{ticketEditorBean.currentTicket.subject}" />
 
             <h3 style="margin-top:0">Ticket ID: </h3>
-            <h:outputText value="#{ticketBean.currentTicket.id}" />
+            <h:outputText value="#{ticketEditorBean.currentTicket.id}" />
 
             <h3 style="margin-top:0">Editor ID: </h3>
-            <h:outputText value="#{ticketBean.currentTicket.editorId}" />
+            <h:outputText value="#{ticketEditorBean.currentTicket.editorId}" />
 
             <h3 style="margin-top:0">Customer: </h3>
-            <h:outputText value="#{userBean.getUserName(ticketBean.currentTicket.customerId)}" />
+            <h:outputText value="#{userBean.getUserName(ticketEditorBean.currentTicket.customerId)}" />
 
             <h3 style="margin-top:0">Customer Company: </h3>
-            <h:outputText value="#{userBean.getUserCompany(ticketBean.currentTicket.customerId)}" />
+            <h:outputText value="#{userBean.getUserCompany(ticketEditorBean.currentTicket.customerId)}" />
 
             <h3>#{msgs['entries']}: </h3>
         </h:panelGrid>
 
-        <p:dataScroller id="searchResult" value="#{ticketBean.currentEntries}" var="entry" chunkSize="10">
+        <p:dataScroller id="searchResult" value="#{ticketEditorBean.currentEntries}" var="entry" chunkSize="10">
             <f:facet name="header">
                 Scroll Down to Load More Entries
             </f:facet>
