--- a/src/main/webapp/pages/editor/ticket-details.xhtml
+++ b/src/main/webapp/pages/editor/ticket-details.xhtml
@@ -46,7 +46,7 @@
 
         <p:dialog header="#{msgs['entry.edit']}" widgetVar="dlgEntry" modal="true" height="200" width="500">
             <p:inputTextarea style="margin: 0 auto" rows="8" cols="70" id="entryText" value="#{ticketEditorBean.entryContent}" />
-            <p:commandButton value="Eintrag Hinzufügen" action="#{ticketEditorBean.addEntryToTicket(ticketEditorBean.entryContent)}" />
+            <h:commandButton value="Eintrag Hinzufügen" action="#{ticketEditorBean.addEntryToTicket(ticketEditorBean.entryContent)}" />
         </p:dialog>
 
         <p:dialog header="#{msgs['ticket.delegate']}" widgetVar="dlgDelegate" modal="true" height="600" width="500" resizable="false">
@@ -57,7 +57,7 @@
 
                 <h:panelGrid columns="2" style="width:100%" columnClasses="delegate,delegateButtons">
                     <h:outputText value="#{user.name}" />
-                    <p:commandButton value="Delegieren" action="#{ticketEditorBean.delegateTicket(user.id)}" id="delegateTicket" />
+                    <h:commandButton value="Delegieren" action="#{ticketEditorBean.delegateTicket(user.id)}" />
                 </h:panelGrid>
             </p:dataScroller>
         </p:dialog>
@@ -65,9 +65,9 @@
         <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
             <h:outputText />
             <h:panelGrid columns="3" class="buttons">
-                <p:commandButton value="#{msgs['button.add.entry']}" type="button" onclick="PF('dlgEntry').show();" />
-                <p:commandButton value="#{msgs['button.delegate']}" type="button" onclick="PF('dlgDelegate').show();" />
-                <p:commandButton value="#{msgs['button.release']}" action="#{ticketEditorBean.releaseTicket()}" />
+                <h:commandButton value="#{msgs['button.add.entry']}" type="button" onclick="PF('dlgEntry').show();" />
+                <h:commandButton value="#{msgs['button.delegate']}" type="button" onclick="PF('dlgDelegate').show();" />
+                <h:commandButton value="#{msgs['button.release']}" action="#{ticketEditorBean.releaseTicket()}" />
             </h:panelGrid>
 
             <p:graphicImage library="images" name="#{ticketEditorBean.currentTicket.status}.png" alt="#{ticketEditorBean.currentTicket.status}" />
