--- a/src/main/webapp/pages/editor/my-tickets.xhtml
+++ b/src/main/webapp/pages/editor/my-tickets.xhtml
@@ -50,7 +50,7 @@
         </f:facet>
 
         <h:panelGrid columns="3" style="width:100%" columnClasses="logo,logo,detail">
-            <p:commandButton action="#{ticketEditorBean.viewTicketDetails(ticket.id, 'editor-my-tickets')}" value="Details" />
+            <p:commandButton action="#{ticketEditorBean.viewTicketDetails(ticket, 'editor-my-tickets')}" value="Details" />
 
             <p:graphicImage library="images" name="#{ticket.status}.png" alt="#{ticket.status}"/>
 
